[package]
name = "scarlett-control"
version = "0.1.0"
edition = "2021"

[dependencies]
alsa = "0.9.1"
eframe = { version = "0.30.0", features = ["accesskit", "default_fonts", "glow", "persistence", "wayland"] }
egui = "0.30.0"
egui_flex = "0.2.0"
egui_material_icons = "0.2.0"
env_logger = "0.11.6"
epaint = "0.30.0"
log = "0.4.25"
serde = { version = "1.0.217", features = ["derive"] }
strum_macros = "0.26.4"
